# rust-mcp4xxx

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs
