[package]
name = "mcp4xxx"
description = "Driver for MCP4XXX series I2C variable potentiometers"
repository = "https://github.com/ryankurte/rust-mcp4xxx"
keywords = ["embedded", "embedded-hal", "mcp4xxx", "i2c", "no_std"]
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2024"

[features]
defmt = [ "dep:defmt" ]
cli = [ "clap", "anyhow", "thiserror", "linux-embedded-hal", "tracing-subscriber" ]
std = [ "thiserror" ]

default = [ "cli" ]

[dependencies]
embedded-hal = "1.0.0"
modular-bitfield = "0.11.0"
bitflags = "2.6.0"
tracing = { version = "0.1.41", default-features = false }

defmt = { version = "0.3.0", optional = true}
clap = { version = "4.5.0", features = [ "derive" ], optional = true }
linux-embedded-hal = { version = "0.4.0", optional = true }
anyhow = { version = "1.0.9", optional = true }
thiserror = { version = "2.0.0", optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"], optional = true }


[[bin]]
name = "mcp4xxx-util"
path = "src/cli.rs"
required-features = [ "cli" ]
